# nostr-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: docker-image.yml  lint.yml
docs/: EXAMPLES.md  INSTALL.md
resources/: contact_list.csv
src/: lib.rs  main.rs  sub_commands.rs  utils.rs
src/sub_commands/: award_badge.rs  broadcast_events.rs  convert_key.rs  create_badge.rs  create_public_channel.rs  custom_event.rs  delete_event.rs  delete_profile.rs  dm.rs  generate_keypair.rs  hide_public_channel_message.rs  list_events.rs  mod.rs  mute_publickey.rs  nostr_connect.rs  nprofile.rs  profile_badges.rs  publish_contactlist_csv.rs  react.rs  recommend_relay.rs  resource.rs  send_channel_message.rs  set_channel_metadata.rs  set_metadata.rs  text_note.rs  update_metadata.rs  user_status.rs  vanity.rs  zap_reciept.rs  zap_request.rs
