[package]
name = "nostr-tool"
version = "0.3.0"
edition = "2021"
description = "A CLI tool to interact with nostr"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/nostr-tool"
repository = "https://github.com/0xtrr/nostr-tool"
license = "MIT"
keywords = ["nostr", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.1.6"
futures = "0.3.27"
nostr-sdk = { git = "https://github.com/thesimplekid/nostr", rev="210a3ede8a5812c6ca447d4483cc9b0482de2aec", features = ["blocking", "vanity", "nip46"] }
num_cpus = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
