[package]
name = "nostr-tool"
version = "0.3.0"
edition = "2021"
description = "A CLI tool to interact with nostr"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/nostr-tool"
repository = "https://github.com/0xtrr/nostr-tool"
license = "MIT"
keywords = ["nostr", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.1.6"
nostr-sdk = { git = "https://github.com/0xtrr/nostr.git", branch = "feature/add-nip-58-support-in-eventbuilder", features = ["blocking", "vanity"] }
num_cpus = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
