[package]
name = "nostr-tool"
version = "0.5.1"
edition = "2021"
description = "A CLI tool to interact with nostr"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/nostr-tool"
repository = "https://github.com/0xtrr/nostr-tool"
license = "MIT"
keywords = ["nostr", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
csv = "1.3.0"
nostr-sdk = "0.32.0"
num_cpus = "1.16.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"
